--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
 </head>
 <body>
   <%= render 'layouts/header' %>
-  <% flash.each do |msg_type, msg| %>
-    <%= content_tag(:div, msg, class: 'alert alert-#{msg_type}') %>
-  <% end %>
   <div class='container'>
+    <% flash.each do |msg_type, msg| %>
+      <div class='alert alert-<%= msg_type %>'><%= msg %></div>
+    <% end %>
     <%= yield %>
     <%= render 'layouts/footer' %>
     <%= debug(params) if Rails.env.development? %>
