--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, 'The Community') %>
 <h1>Users</h1>
 
+<%= will_paginate %>
+
 <ul class='users'>
   <% @users.each do |user| %>
     <li>
@@ -8,4 +10,6 @@
       <%= link_to user.name, user %>
     </li>
   <% end %>
+  
+<%= will_paginate %>
 </ul>
