--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,10 +4,10 @@
 
 <div class='row'>
   <div class='col-md-6 col-md-offset-3'>
-    <%= render 'form' %>
+    <%= render 'form' %><br />
     <div class='gravatar-edit'>
       <%= gravatar_for @user %>
-      <a href='http://gravatar.com/emails' target='_blank'>change</a>
+      <a href='http://gravatar.com/emails' target='_blank'><strong>Change Photo</strong></a>
     </div>
   </div>
 </div>
